# Dictify

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
docs/: live-captions.md
prompts/: transcription_editor.md
src/dictify/: captions.py  cli.py  config.py
src/dictify/client_pyside6/: api_client.py  app.py  audio_player.py  debug_store.py  debug_tab.py  hotkey.py  main_window.py  recorder.py  settings_tab.py  typer.py
src/dictify/server/: app.py  pipeline.py  routes.py  transcriber.py
src/vocalize/: captions.py  cli.py  models.py
src/vocalize/client_pyside6/: api_client.py  app.py  debug_store.py  debug_tab.py  main_window.py  overlay.py  recorder.py  settings_tab.py
src/vocalize/server/: app.py  ollama.py  pipeline.py  routes.py  transcriber.py
