[project]
name = "dictify"
version = "0.1.0"
description = "Push-to-talk voice-to-text with LLM post-processing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "faster-whisper>=1.1",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "pynput>=1.7",
    "pyperclip>=1.8",
    "httpx>=0.28",
    "pyyaml>=6",
    "rich>=13",
    "pydantic>=2",
    "pydantic-settings>=2",
    "openai>=1.60",
    "python-multipart>=0.0.9",
    "PySide6>=6.6",
    "pyaudiowpatch>=0.2.12.8",
    "scipy>=1.17.1",
]

[project.scripts]
dictify = "dictify.cli:main"
server = "dictify.cli:run_server"
client = "dictify.cli:run_client_ui"
ui = "dictify.cli:run_client_ui"
live-captions = "dictify.cli:run_live_captions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
